# OpenGLviewer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
include/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Viewer.cpp  Viewer.h  glfw_helpfunc.cpp  glfw_helpfunc.h
shaders/: pos_color.fs  pos_color.vs  single_color.fs.bak  single_color.vs.bak
